--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,9 @@
 
     <ListView
         android:id="@+id/listview"
+        android:background="@android:color/background_light"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:cacheColorHint="#00000000"
-        android:divider="@android:color/transparent"
-        android:fadingEdge="none"
+        android:layout_height="match_parent"
         android:fastScrollEnabled="false"
         android:footerDividersEnabled="false"
         android:headerDividersEnabled="false"
