--- a/app/src/main/res/layout/list_item_1.xml
+++ b/app/src/main/res/layout/list_item_1.xml
@@ -5,4 +5,5 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:padding="15dp"
+    android:textColor="@android:color/black"
     android:textSize="24sp" />
